--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -9,6 +9,12 @@
         </div>
       </div>
 
+      {% if product.variants[0].featured_image == blank %}
+        {% assign noVariantImage = true %}
+      {% else %}
+        {% assign noVariantImage = false %}
+      {% endif %}
+
       {% comment %} images wich are not in any variant {% endcomment %}
       {% assign index = 0 %}
       {% for image in product.images %}
@@ -18,6 +24,12 @@
           {% if image == variant.featured_image.src %}
             {% assign isVariantImage = true %}
           {% endif %}
+
+          {% comment %} if the variant has no image the featured_image is the variant image {% endcomment %}
+          {% if noVariantImage == true and image == product.featured_image %}
+            {% assign isVariantImage = true %}
+          {% endif %}
+
         {% endfor %}
 
         {% if isVariantImage == false %}
