[Product] Change all images by color selection

--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -86,7 +86,7 @@
     <div class="ml-auto col-auto d-flex align-items-center">
       <ul class="nav" style="pointer-events: all;">
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/search">
             <rv-icon rv-src="'{{ 'iconset-glass.svg' | asset_url }}'" size="24"></rv-icon>
           </a>
         </li>   
