--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -11,7 +11,7 @@
 
     <div class="row">
       {% comment %} Other variant images {% endcomment %}
-      <div rv-range-each-image-0-1="variant.images" class="'col-12 col-md px-0" >
+      <div rv-each-image="variant.images | range 0 1" class="'col-12 col-md px-0" >
         <div class="content-box ratio-3-4">      
           <img class="content" rv-src="image | img_url: '960x1280' 2" alt="variant.title" />
         </div>
@@ -20,15 +20,15 @@
 
     <div class="row">
       {% comment %} Other variant images {% endcomment %}
-      <div rv-range-each-image-2-4="variant.images" class="'col-12 col-md px-0" >
-        <div class="content-box ratio-3-4">      
+      <div rv-each-image="variant.images | range 2 4" class="'col-12 col-md px-0" >
+        <div class="content-box ratio-3-4">     
           <img class="content" rv-src="image | img_url: '960x1280' 2" alt="variant.title" />
         </div>
       </div>
     </div>
 
     <div class="row" rv-if="variant.images | count | egt 5">
-      <div rv-range-each-image-5-x="variant.images" class="'col-12 col-md px-0">
+      <div rv-each-image="variant.images | range 5" class="'col-12 col-md px-0">
         <div class="content-box ratio-3-4">      
           <img class="content" rv-src="image | img_url: '960x1280' 2" alt="variant.title" />
         </div>
