--- a/src/scss/bundle.scss
+++ b/src/scss/bundle.scss
@@ -37,7 +37,7 @@
 @import 'product';
 @import 'cart';
 @import 'filter'; // TODO
-@import 'templates';
+@import 'templates/index';
 
 // components, binders and sections
 @import '../ts/components/index';
