--- a/theme/templates/cart.liquid
+++ b/theme/templates/cart.liquid
@@ -1,143 +1,7 @@
-<div id="cart">
-
-  <div class="container pt-5">
-
-    {% comment %} With Items {% endcomment %}
-    <form rv-d-flex="cart.item_count | gt 0" action="/cart" method="post" class="row">
-
-      {% comment %} Left {% endcomment %}
-      <div class="col-xs-12 col-md-9">
-        <div class="row">
-
-          {% comment %} Products {% endcomment %}
-          <div rv-each-product="cart.products" data-toggle="product-modal" rv-data-product-index="%product%" rv-data-product-handle="product.handle" class="col-xs-12 col-sm-6 col-md-4 col-xl-4">
-
-            {% comment %} Product {% endcomment %}
-            <div class="product-item mx-2 mb-4">
-
-              <div class="image-wrap">  
-                <div class="background-box {{ settings.products_aspect_ratio }}" rv-background-image="product.featured_image" rv-title="product.title"></div>
-                <div class="caption">
-                  <p rv-show="{{ settings.products_show_vendor }}" class="vendor text-nowrap">
-                    { product.vendor }
-                  </p>
-                
-                  <p rv-show="{{ settings.products_show_title }}" class="title text-nowrap">
-                    { product.title }
-                  </p>
-                </div>
-              </div>
-            </div>
-            
-          </div>
-        </div>
-      </div>
-
-      {% comment %} Right {% endcomment %}
-      <div class="hidden-md-down col-md-3 fixed-right cart-summary">
-        <hr class="my-4" />
-        {% comment %} Summary {% endcomment %}
-        <h3 class="mb-4 text-uppercase">{ cart.products | size } Items</h3>
-        <p class="mb-0 cart-price">{ cart.total_price | money }</p>
-        <p class="product-legal-text mt-0">
-          <small>{{ 'product.general.legal_price_text' | t: vat_rate: '19' }}</small>
-        </p>
-        <input type="submit" name="checkout" value="{{ 'cart.general.checkout' | t }}" class="btn btn-primary" />
-      </div>
-
-      <div class="hidden-lg-up navbar fixed-bottom navbar-light bg-white border-t border-px-1 border-color-gray-lighter d-flex flex-row justify-content-between">
-        
-        <span class="navbar-text">
-          { cart.products | size } Items
-        </span>
-
-        <span class="navbar-text">
-          <p class="mb-0 cart-price my-0">{ cart.total_price | money }</p>
-          <p class="product-legal-text my-0">
-            <small>{{ 'product.general.legal_price_text' | t: vat_rate: '19' }}</small>
-          </p>
-        </span>
-
-        <div class="form-inline">
-          <button type="submit" name="checkout" class="btn btn-primary">{{ 'cart.general.checkout' | t }}</button>
-        </div>
-
-      </div>
-
-    </form>
-
-    {% comment %} Without Items {% endcomment %}
-    <div rv-d-block="cart.item_count | lt 1">
-      <div class="row">
-        <div class="col-xs-12 text-center">
-          <h2>{{ 'cart.general.empty' | t }}</h2>
-          <p>{{ 'cart.general.empty_message' | t }}</p>
-          <a href="/" class="btn btn-primary">{{ 'cart.general.continue' | t }}</a>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="modal modal-fullscreen modal-cart" id="cart-modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        {% comment %} padding top for navbar {% endcomment %}
-        <div class="modal-body" style="padding-top: 52px;">
-
-          {% comment %} jumplink-breadcrumbs-slide-buttons {% endcomment %}
-          <div class="container pt-1">
-            <div class="row">
-              <div class="col-xs-6">
-                <ul class="pagination modal-buttons">
-                    <li data-dismiss="modal" aria-label="Close" class="page-item">
-                      <div class="page-link prev d-flex flex-row justify-content-center">
-                        {% include 'jumplink-iconset', name: 'arrow-big', direction: 'left', color: 'black' %} <small>back</small>
-                      </div>
-                    </li>
-                </ul>
-              </div>
-              <div class="col-xs-6 d-flex justify-content-end">
-                <ul class="pagination slide-buttons">
-                  <li data-slick-method="slickPrev" data-target="#cart-modal .slick-slider" class="page-item">
-                    <div class="page-link prev d-flex flex-row justify-content-center">
-                      {% include 'jumplink-iconset', name: 'arrow-big', direction: 'left', color: 'black' %} <small>prev</small>
-                    </div>
-                  </li>
-
-                  <li data-slick-method="slickNext" data-target="#cart-modal .slick-slider" class="page-item">
-                    <div class="page-link next d-flex flex-row justify-content-center">
-                      <small>next</small> {% include 'jumplink-iconset', name: 'arrow-big', direction: 'right', color: 'black' %}
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="container">
-            <div class="row">
-            
-              <div class="col-xs-12 col-md-9 product-details-slider slick-slider bg-body">
-
-                {% comment %} Products {% endcomment %}
-                <div rv-each-product="cart.products" rv-data-product-index="%product%" rv-data-product-handle="product.handle">
-                  <div class="row mx-0">
-                    <div class="product-photos col-xs-12 col-md-6 mb-1">
-                      <product-images-slick product="product" show-thums="false" in-b2bcart="true" with-fullscreen-modal="false" has-parent-modal="true" parent-modal-target="'#cart-modal'"></product-images-slick>
-                    </div>
-                    <div class="product-details col-xs-12 col-md-6">
-                      <product product="product" vendor-url="'{{ vendor_url }}'" add-update-button-class="'btn btn-secondary'"></product>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
+<div class="container-fluid pt-5">
+  <div class="row pt-5">
+    <div class="col col-md-8 col-lg-6 mx-auto">
+      <h1>The shopping bag is not yet unlocked, but this will be the case in a few weeks.<br />Many Thanks.</h1>
     </div>
   </div>
 </div>
