--- a/src/scss/templates/_navigation.scss
+++ b/src/scss/templates/_navigation.scss
@@ -3,3 +3,15 @@
     display: none !important;
   }
 }
+
+.logo-text-sm {
+  letter-spacing: .1rem;
+  font-weight: bold;
+  font-size: 0.9rem;
+  a {
+    padding-top: 0.8rem;
+    display: inline-block;
+    text-decoration: none;
+  }
+  
+}
