--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -1,4 +1,5 @@
-<footer class="container-fluid footer pointer-events-none pt-5">
+{% comment %} footer desktop {% endcomment %}
+<footer class="container-fluid footer pointer-events-none pt-5 d-none d-lg-block">
   {% comment %}
     MAINBAR
   {% endcomment %}
@@ -49,3 +50,20 @@
   </div>
 
 </footer>
+
+{% comment %} footer smartphone {% endcomment %}
+<div class="container-fluid d-block d-lg-none bg-white fixed-bottom py-1">
+  <div class="row">
+    <a class="col d-flex justify-content-center" rv-on-route-active="'/blogs/blog'" rv-route="'/blogs/blog'">
+      <rv-icon class="cursor-pointer" rv-src="'{{ 'iconset-eye.svg' | asset_url }}'" height="32" width="32"></rv-icon>
+    </a>
+
+    <div class="col d-flex justify-content-center">
+      <rv-icon class="cursor-pointer" rv-src="'{{ 'iconset-menu.svg' | asset_url }}'" height="32" width="32"></rv-icon>
+    </div>
+
+    <a class="col d-flex justify-content-center" rv-on-route-active="'/cart'" rv-route="'/cart'" href="/cart">
+      <rv-icon class="cursor-pointer" rv-src="'{{ 'iconset-shopping-bag.svg' | asset_url }}'" height="32" width="32"></rv-icon>
+    </a>
+  </div>
+</div>
